--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Publish package
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
-          PROJECT_FILE_PATH: Bee.HtmlToPdf/Bee.HtmlToPdf.csproj
+          PROJECT_FILE_PATH: Bee.NumberToWords/Bee.NumberToWords.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
