--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Publish package
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
-          PROJECT_FILE_PATH: Bee.NumberToText/Bee.NumberToText.csproj
+          PROJECT_FILE_PATH: Bee.NumberToWords/Bee.NumberToWords.csproj
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
