Converted arabic culture to international numeric system

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Bee.NumberToWords/obj
 /WordConversionTests/bin/Debug/net5.0
 /WordConversionTests/obj
+/.vs/Bee.NumberToWords/DesignTimeBuild/.dtbcache.v2
